# tsukuba-paypay-campain

./: README.md  output.csv  pyproject.toml  read.py
csv/: 1108insyoku.pdf.csv  1108kouri.pdf.csv  1108sa-bisu.pdf.csv  1108tsukubasan.pdf.csv
